#ES-301 - refactoring processes